--- a/src/sys-user/home-page/userhome.scss
+++ b/src/sys-user/home-page/userhome.scss
@@ -42,31 +42,36 @@ main {
 
             .product {
                 overflow-y: scroll;
-                width: 710px;
                 height: 82vh;
+                width: 710px;
                 margin-top: 12px;
-                display: flex;
-                flex-wrap: wrap;
+                
 
-                .prod-display {
-                    width: 165px;
-                    height: 180px;
-                    margin-left: 6px;
-                    margin-top: 10px;
-                    border-radius: 10px;
-                    text-align: center;
-                    @include flexBox();
-                    justify-content: center;
-                    flex-direction: column;
-                    cursor: pointer;
-                    color: $header-color;
-                    background-color: $divider-color;
-                    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+                .display-div {
+                    width: 690px;
+                    display: flex;
+                    flex-wrap: wrap;
 
-                    .prod-img {
-                        width: 150px;
-                        height: 100px;
-                        background-color: $white-color;
+                    .prod-display {
+                        width: 165px;
+                        height: 200px;
+                        margin-left: 6px;
+                        margin-top: 10px;
+                        border-radius: 10px;
+                        text-align: center;
+                        @include flexBox();
+                        justify-content: center;
+                        flex-direction: column;
+                        cursor: pointer;
+                        color: $header-color;
+                        background-color: $divider-color;
+                        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    
+                        .prod-img {
+                            width: 150px;
+                            height: 100px;
+                            background-color: $white-color;
+                        }
                     }
                 }
             }
@@ -78,7 +83,7 @@ main {
 
             .search-bar {
                 input[type=text] {
-                    width: 75%;
+                    width: 76%;
                     padding: 5px 8px;
                     margin: 10px 0;
                     display: inline-block;
