--- a/src/sys-admin/product-page/adminProduct.css
+++ b/src/sys-admin/product-page/adminProduct.css
@@ -67,4 +67,180 @@ header nav a:hover {
   margin: 0 0 0 70px;
   font-size: 0.5rem;
   color: #a8896c;
+}
+
+main {
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .container {
+  width: 1120px;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+}
+main .container .product-cont {
+  width: 740px;
+  height: 90vh;
+}
+main .container .product-cont .addItem-cont {
+  margin-top: 10px;
+  width: 710px;
+  height: 200px;
+  background-color: #f2e5db;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+}
+main .container .product-cont .addItem-cont .pps {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  width: 710px;
+  justify-content: center;
+}
+main .container .product-cont .addItem-cont .pps .first {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin: 10px 10px 0 10px;
+}
+main .container .product-cont .addItem-cont .pps .first #product {
+  width: 250px;
+}
+main .container .product-cont .addItem-cont .pps .first input {
+  padding: 5px 8px;
+  display: inline-block;
+  border: 1px solid #a8896c;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+main .container .product-cont .addItem-cont .pps .first input:focus {
+  outline: none;
+  border: 1px solid #dbb07b;
+}
+main .container .product-cont .addItem-cont .description {
+  display: flex;
+  flex-direction: column;
+  margin: 0 22px;
+}
+main .container .product-cont .addItem-cont .description textarea {
+  width: 665px;
+  display: inline-block;
+  border: 1px solid #a8896c;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+main .container .product-cont .addItem-cont .description textarea:focus {
+  outline: none;
+  border: 1px solid #dbb07b;
+}
+main .container .product-cont .category {
+  margin-top: 10px;
+}
+main .container .product-cont .category button {
+  font-family: "Poppins", sans-serif;
+  border: 2px solid #a8896c;
+  background-color: #ffffff;
+  width: 100px;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+  color: #a8896c;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+main .container .product-cont .category button:hover {
+  color: #ffffff;
+  background-color: #a8896c;
+}
+main .container .product-cont .category .active {
+  color: #ffffff;
+  background-color: #a8896c;
+}
+main .container .product-cont .product {
+  overflow-y: scroll;
+  height: 52vh;
+  width: 710px;
+  margin-top: 12px;
+}
+main .container .product-cont .product .display-div {
+  width: 690px;
+  display: flex;
+  flex-wrap: wrap;
+}
+main .container .product-cont .product .display-div .prod-display {
+  width: 165px;
+  height: 200px;
+  margin-left: 6px;
+  margin-top: 10px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  color: #a8896c;
+  background-color: #f2e5db;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .product-cont .product .display-div .prod-display:hover {
+  opacity: 75%;
+}
+main .container .product-cont .product .display-div .prod-display .prod-img {
+  width: 150px;
+  height: 100px;
+  background-color: #ffffff;
+}
+main .container .inbox-cont {
+  width: 380px;
+  height: 90vh;
+}
+main .container .inbox-cont .search-bar input[type=text] {
+  width: 76%;
+  padding: 5px 8px;
+  margin: 10px 0;
+  display: inline-block;
+  border: 1px solid #a8896c;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+main .container .inbox-cont .search-bar input[type=text]:focus {
+  outline: none;
+  border: 1px solid #dbb07b;
+}
+main .container .inbox-cont .search-bar button {
+  width: 22%;
+  padding: 4px 0;
+  border-radius: 5px;
+  border: 1px solid #a8896c;
+  color: #ffffff;
+  background-color: #a8896c;
+  cursor: pointer;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+main .container .inbox-cont .search-bar button:hover {
+  opacity: 70%;
+}
+main .container .inbox-cont .inbox {
+  width: 380px;
+  height: 83vh;
+  color: #a8896c;
+  background-color: #f2e5db;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+main .container .inbox-cont .inbox h1 {
+  text-align: center;
+  padding-top: 10px;
+}
+main .container .inbox-cont .inbox h3 {
+  margin: 10px 0 0 10px;
+}
+main .container .inbox-cont .inbox p {
+  margin-left: 30px;
 }/*# sourceMappingURL=adminProduct.css.map */
