--- a/src/sys-user/home-page/userhome.css
+++ b/src/sys-user/home-page/userhome.css
@@ -49,7 +49,7 @@ header nav a {
   text-decoration: none;
   color: #ffffff;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 400;
 }
 header nav a:hover {
   border-bottom: 3px solid #ffffff;
@@ -118,10 +118,9 @@ main .container .product-cont .product .display-div {
 }
 main .container .product-cont .product .display-div .prod-display {
   width: 165px;
-  height: 200px;
+  height: 250px;
   margin-left: 6px;
   margin-top: 10px;
-  border-radius: 10px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -133,12 +132,18 @@ main .container .product-cont .product .display-div .prod-display {
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 main .container .product-cont .product .display-div .prod-display:hover {
-  opacity: 75%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 main .container .product-cont .product .display-div .prod-display .prod-img {
   width: 150px;
-  height: 100px;
+  height: 150px;
   background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .container .product-cont .product .display-div .prod-display h3, main .container .product-cont .product .display-div .prod-display p {
+  margin-top: 10px;
 }
 main .container .shopinfo-cont {
   width: 380px;
