--- a/src/sys-admin/product-page/adminProduct.scss
+++ b/src/sys-admin/product-page/adminProduct.scss
@@ -26,7 +26,7 @@ main {
             .addItem-cont {
                 margin-top: 10px;
                 width: 710px;
-                height: 250px;
+                height: 230px;
                 background-color: $divider-color;
                 color: $header-color;
                 border-radius: 10px 0 10px 0;
@@ -45,10 +45,11 @@ main {
                         margin: 10px 10px 0 10px;
 
                         #product {
-                            width: 250px;
+                            width: 260px;
                         }
 
                         input {
+                            font-family: $font-family;
                             padding: 5px 8px;
                             display: inline-block;
                             border: 1px solid $header-color;
@@ -105,8 +106,9 @@ main {
                         width: 400px;
 
                         select {
+                            font-family: $font-family;
                             margin-left: 22px;
-                            padding: 5px 8px;
+                            padding: 2px 8px;
                             display: inline-block;
                             border: 1px solid $header-color;
                             border-radius: 5px;
@@ -115,6 +117,7 @@ main {
                         }
 
                         input[type=file] {
+                            font-family: $font-family;
                             cursor: pointer;
                             padding: 3px 4px;
                             width: 220px;
@@ -133,6 +136,7 @@ main {
                         text-align: end;
 
                         button {
+                            font-family: $font-family;
                             width: 100px;
                             background-color: $header-color;
                             border-color: $header-color;
@@ -241,12 +245,13 @@ main {
 
                 button {
                     width: 22%;
-                    padding: 4px 0;
+                    padding: 2px 0;
                     border-radius: 5px;
                     border: 1px solid $header-color;
                     color: $white-color;
                     background-color: $header-color;
                     cursor: pointer;
+                    font-family: $font-family;
                     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
                     &:hover {
@@ -266,10 +271,12 @@ main {
                     width: 380px;
                     @include flexBox();
                     justify-content: space-between;
-                    border-bottom: 2px solid $header-color;
+                    border-bottom: 2px solid $white-color;
+                    background-color: $header-color;
 
                     h2, p {
                         margin: 10px;
+                        color: $white-color;
                     }
                 }
 
