--- a/src/sys-admin/message-page/adminMessage.scss
+++ b/src/sys-admin/message-page/adminMessage.scss
@@ -1,1 +1,198 @@
 @use '../../style/header/header';
+@use '../../style/globals' as *;
+
+main {
+    width: 100%;
+    height: 90vh;
+    @include flexBox();
+    justify-content: center;
+
+    .container {
+        width: 1120px;
+        height: 90vh;
+        @include flexBox();
+
+        .message-cont {
+            width: 740px;
+            height: 90vh;
+
+            .message-head {
+                margin-top: 12px;
+                width: 710px;
+                height: 50px;
+                border-radius: 10px 10px 0 0;
+                background-color: $divider-color;
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+                @include flexBox();
+
+                img {
+                    margin-left: 20px;
+                    border-radius: 50%;
+                }
+
+                a {
+                    color: $header-color;
+                    margin-left: 10px;
+                    font-size: 1.3rem;
+                    font-weight: 600;
+                    text-decoration: none;
+
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+            }
+
+            .message-box {
+                overflow-y: scroll;
+                height: 72vh;
+                width: 710px;
+                border-left: 3px solid $divider-color;  
+                border-right: 3px solid $divider-color; 
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px; 
+            }
+
+            .message-input {
+                margin-bottom: 12px;
+                width: 710px;
+                height: 70px;
+                border-radius: 0 0 10px 10px;
+                background-color: $divider-color;
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+            
+                form {
+                    @include flexBox();
+
+                    .file {
+                        margin: 10px 20px 0 20px;
+                        label {
+                            cursor: pointer;
+                        }
+
+                        input[type=file] {
+                            opacity: 0;
+                            position: absolute;
+                            z-index: -1;
+                        }
+                    }
+
+                    textarea {
+                        font-family: $font-family;
+                        margin-top: 10px;
+                        resize: none;
+                        border-radius: 10px;
+                        padding: 10px;
+                    }
+
+                    button {
+                        cursor: pointer;
+                        margin: 10px 20px 0 20px;
+                        border: none;
+                        background-color: $divider-color;
+
+                        &:hover {
+                            opacity: 80%;
+                        }
+                    }
+                }
+            }
+        }
+
+        .inbox-cont {
+            width: 380px;
+            height: 90vh;
+
+            .search-bar {
+                input[type=text] {
+                    width: 76%;
+                    padding: 5px 8px;
+                    margin: 10px 0;
+                    display: inline-block;
+                    border: 1px solid $header-color;
+                    border-radius: 5px;
+                    box-sizing: border-box;
+                    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+                    
+                    &:focus {
+                        outline: none;
+                        border: 1px solid $mt-color;
+                    }
+                }
+
+                button {
+                    width: 22%;
+                    padding: 2px 0;
+                    border-radius: 5px;
+                    border: 1px solid $header-color;
+                    color: $white-color;
+                    background-color: $header-color;
+                    cursor: pointer;
+                    font-family: $font-family;
+                    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
+                    &:hover {
+                        opacity: 70%;
+                    }
+                }
+            }
+
+            .inbox {
+                width: 380px;
+                height: 83vh;
+                color: $header-color;
+                background-color: $divider-color;
+                box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+                
+                .inbox-header {
+                    width: 380px;
+                    @include flexBox();
+                    justify-content: space-between;
+                    border-bottom: 2px solid $white-color;
+                    background-color: $header-color;
+
+                    h2, p {
+                        margin: 10px;
+                        color: $white-color;
+                    }
+                }
+
+                .inbox-message-cont {
+                    overflow-y: scroll;
+                    width: 380px;
+                    height: 75vh;
+                    @include flexBox();
+                    flex-direction: column;
+                    cursor: pointer;
+                    
+                    .inbox-message {
+                        width: 350px;
+                        height: 55px;
+                        @include flexBox();
+                        margin-top: 10px;
+                        background-color: $white-color;
+                        justify-content: start;
+                        border: 1px solid $header-color;
+                        border-radius: 5px;
+
+                        &:hover {
+                            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                        }
+
+                        img {
+                            border-radius: 50%;
+                            border: 1px solid $header-color;
+                            margin: 10px;
+                        }
+
+                        .name-addr {
+                            
+                            p {
+                                font-size: .7rem;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
