--- a/src/sys-admin/feed-profile-page/adminProfile.scss
+++ b/src/sys-admin/feed-profile-page/adminProfile.scss
@@ -177,6 +177,16 @@ main {
                 color: $header-color;
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+
+                .profile-pic {
+                    @include flexBox();
+                    justify-content: center;
+
+                    img {
+                        margin: 10px 0;
+                        border-radius: 50%;
+                    }
+                }
                 
                 h1 {
                     text-align: center;
