--- a/src/sys-user/home-page/userhome.scss
+++ b/src/sys-user/home-page/userhome.scss
@@ -53,6 +53,58 @@ main {
                     display: flex;
                     flex-wrap: wrap;
 
+                    .product-popup {
+                        display: none;
+                        position: fixed;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100vh;
+                        z-index: 99999;
+                        background-color: rgba(0, 0, 0, 0.575);
+
+                        .product-popup-form {
+                            height: 100vh;
+                            width: 400px;
+                            margin: auto;
+                            display: flex;
+                            justify-content: center;
+                            background-color: $divider-color;
+
+                            .popup-header {
+                                display: flex;
+                                align-items:flex-start;
+                                border-bottom: 2px solid $header-color;
+                                flex-direction: column;
+                                
+                                .exit-button {
+                                    @include flexBox();
+                                    height: 50px;
+                                    background-color: $header-color;
+                                    color: $white-color;
+                                    width: 400px;
+                                    justify-content: baseline;
+                                    border: 2px solid $header-color;
+
+                                    button {
+                                        cursor: pointer;
+                                        margin: 0 10px 0 10px;
+                                        background-color: $header-color;
+                                        border: none;
+                                    }
+                                }
+
+                                .product-content {
+                                    width: 400px;
+                                    height: 400px;
+                                    border: 20px solid $divider-color;
+                                    background-color: $white-color;
+                                }
+                            }
+                        }
+
+                    }
+
                     .prod-display {
                         width: 165px;
                         height: 250px;
@@ -130,6 +182,16 @@ main {
                 color: $header-color;
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+                
+                .profile-pic {
+                    @include flexBox();
+                    justify-content: center;
+
+                    img {
+                        margin: 10px 0;
+                        border-radius: 50%;
+                    }
+                }
                 
                 h1 {
                     text-align: center;
